--- a/src/components/home/testimonials/style.scss
+++ b/src/components/home/testimonials/style.scss
@@ -1,16 +1,22 @@
 @use "@/app/(client)/scss/variables" as *;
 
-#testimonials {
-  max-width: 100vw;
-  width: 100%;
+#Testimonials {
+  width: 100vw;
+  max-width: 100%;
+  margin: 40px 0;
   display: flex;
   flex-direction: column;
   gap: 40px;
-  margin: 40px 0;
-  overflow-x: clip;
-  overflow-y: visible;
 
-  .title-container {
+  @media screen and (min-width: 820px) {
+    padding: 0 4vw 50px 4vw;
+  }
+
+  @media screen and (min-width: 1025px) {
+    padding: 0 4vw 50px 4vw;
+  }
+
+  .title_container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,216 +42,8 @@
       margin-top: 20px;
       color: $yellow;
     }
-  }
 
-  .testimonials-container {
-    width: 100%;
-    padding: 0 4vw;
-
-    .mySwiper-images {
-      margin-bottom: 20px;
-
-      //*---------->> Tablet
-
-      @media screen and (min-width: 820px) {
-        padding-inline: 20px;
-        overflow: visible;
-      }
-
-      .next,
-      .prev {
-        position: absolute;
-        z-index: 10;
-        font-family: swiper-icons;
-        top: 50%;
-        cursor: pointer;
-        transform: translateY(-50%);
-
-        .size {
-          $size: 25px;
-          width: $size;
-          height: $size;
-          border-radius: 100px;
-          font-size: 10px;
-          color: #1d1d1f;
-          background-color: $yellow;
-          font-weight: bold;
-          display: grid;
-          place-content: center;
-        }
-      }
-
-      .prev {
-        left: 10px;
-        right: auto;
-        padding: 10px 10px 10px 0;
-
-        //*---------->> Tablet
-
-        @media screen and (min-width: 820px) {
-        }
-      }
-      .next {
-        left: auto;
-        right: 10px;
-        padding: 10px 0px 10px 10px;
-      }
-
-      .swiperSlide-card {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0 4vw;
-
-        a {
-          width: 100%;
-          aspect-ratio: 1 / 1;
-          position: relative;
-          border-radius: 5px;
-          overflow: hidden;
-
-          img {
-            position: absolute;
-            inset: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-        }
-      }
-    }
-
-    .mySwiper-content {
-      display: flex;
-
-      .swiperSlide-card {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        padding: 0 3vw 0 3vw;
-        visibility: hidden;
-
-        .title {
-          h3 {
-            font-size: 1.3rem;
-          }
-        }
-
-        .hashtags {
-          display: flex;
-          gap: 5px;
-          width: 100%;
-          flex-wrap: wrap;
-
-          p {
-            padding: 2px 10px;
-            background-color: $offLight;
-            font-size: 0.9rem;
-            border-radius: 100px;
-          }
-        }
-        .shortReview {
-          margin-top: 10px;
-        }
-
-        .profile-container {
-          display: flex;
-          width: 100%;
-          background-color: $offLight;
-          padding: 10px;
-          border-radius: 10px;
-          flex-direction: column;
-          margin: 10px 0;
-
-          .profile {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-
-            .img-container {
-              position: relative;
-              width: 50px;
-              aspect-ratio: 1 / 1;
-              border-radius: 1000px;
-              //border: 1px solid $dark;
-              overflow: hidden;
-              display: grid;
-              place-content: center;
-              background-color: $yellow;
-
-              img {
-                position: absolute;
-                inset: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-              }
-
-              h5 {
-                font-size: 2.2rem;
-                opacity: 0.9;
-              }
-            }
-
-            &-info {
-              display: flex;
-              flex-direction: column;
-              gap: 2px;
-
-              h4 {
-                font-size: 1.1rem;
-              }
-
-              p {
-                font-size: 0.8rem;
-                opacity: 0.5;
-              }
-            }
-          }
-
-          .rating-container {
-            margin-top: 10px;
-            display: flex;
-            justify-content: space-between;
-
-            .stars {
-              display: flex;
-            }
-
-            p {
-              font-size: 0.8rem;
-              opacity: 0.8;
-              font-style: italic;
-            }
-          }
-        }
-
-        .button {
-          background-color: $yellow;
-          color: $light;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 10px 0;
-          border-radius: 5px;
-        }
-      }
-
-      .swiper-slide-active {
-        visibility: visible !important;
-      }
-    }
-  }
-}
-
-//*---------->> Tablet
-
-@media screen and (min-width: 820px) {
-  #testimonials {
-    padding: 0 4vw 50px 4vw;
-
-    .title-container {
+    @media screen and (min-width: 820px) {
       gap: 10px;
 
       h2 {
@@ -266,56 +64,203 @@
         }
       }
     }
+  }
 
-    .testimonials-container {
+  .testimonials_container {
+    width: 100%;
+    padding: 0 4vw;
+
+    @media screen and (min-width: 820px) {
       display: flex;
       gap: 40px;
+      height: 40vw;
+    }
 
-      .mySwiper-images {
+    @media screen and (min-width: 1025px) {
+      align-items: center;
+      justify-content: center;
+      height: 30vw;
+    }
+
+    .left {
+      width: 100%;
+      aspect-ratio: 1;
+
+      @media screen and (min-width: 820px) {
         width: 50%;
-
-        .swiperSlide-card {
-          width: 100%;
-          padding: 0;
-        }
       }
 
-      .mySwiper-content {
+      @media screen and (min-width: 1025px) {
+        width: 40%;
+      }
+
+      a {
+        position: relative;
+        width: 100%;
+        aspect-ratio: 1;
+        overflow: hidden;
+        border-radius: 10px;
+        overflow: hidden;
+
+        img {
+          position: absolute;
+          inset: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+    }
+
+    .right {
+      @media screen and (min-width: 820px) {
+        padding-top: 50px;
         width: 50%;
+      }
 
-        .swiperSlide-card {
-          padding: 0;
+      @media screen and (min-width: 1025px) {
+        width: 40%;
+      }
 
-          .title {
+      .data_container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 0 3vw 0 3vw;
+
+        @media screen and (min-width: 1025px) {
+          padding-top: 2vw;
+        }
+
+        @media screen and (min-width: 1462px) {
+          padding-top: 6vw;
+        }
+
+        .title {
+          h3 {
+            font-size: 1.3rem;
+          }
+
+          @media screen and (min-width: 1025px) {
+            transition: color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            &:hover {
+              color: $yellow;
+            }
+
             h3 {
-              font-size: 1.3rem;
+              font-size: 1.8rem;
+              font-weight: 400;
             }
           }
+        }
 
-          .hashtags {
-            p {
+        .hashtags {
+          display: flex;
+          gap: 5px;
+          width: 100%;
+          flex-wrap: wrap;
+
+          p {
+            padding: 2px 10px;
+            background-color: $offLight;
+            font-size: 0.9rem;
+            border-radius: 100px;
+
+            @media screen and (min-width: 820px) {
               font-size: 0.8rem;
-              border-radius: 100px;
             }
           }
+        }
 
-          .shortReview {
+        .shortReview {
+          margin-top: 10px;
+
+          @media screen and (min-width: 820px) {
             margin: 0;
             font-size: 0.9rem;
           }
 
-          .profile-container {
-            margin: 0;
-            .profile {
-              .img-container {
-                width: 42px;
+          @media screen and (min-width: 1025px) {
+            margin-top: 10px;
+            font-size: 1.2rem;
+            line-height: 1.4;
+          }
+        }
 
-                h5 {
+        .profile-container {
+          display: flex;
+          width: 100%;
+          background-color: $offLight;
+          padding: 10px;
+          border-radius: 10px;
+          flex-direction: column;
+          margin: 10px 0;
+
+          @media screen and (min-width: 820px) {
+            margin: 0;
+          }
+
+          @media screen and (min-width: 1025px) {
+            margin: 10px 0;
+            flex-direction: row;
+            align-self: center;
+            justify-content: space-between;
+          }
+
+          .profile {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+
+            .img-container {
+              position: relative;
+              width: 50px;
+              aspect-ratio: 1 / 1;
+              border-radius: 1000px;
+              //border: 1px solid $dark;
+              overflow: hidden;
+              display: grid;
+              place-content: center;
+              background-color: $yellow;
+
+              @media screen and (min-width: 820px) {
+                width: 42px;
+              }
+
+              img {
+                position: absolute;
+                inset: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
+
+              h5 {
+                font-size: 2.2rem;
+                opacity: 0.9;
+
+                @media screen and (min-width: 820px) {
                   font-size: 2rem;
                 }
               }
+            }
 
-              &-info {
+            &-info {
+              display: flex;
+              flex-direction: column;
+              gap: 2px;
+
+              h4 {
+                font-size: 1.1rem;
+              }
+
+              p {
+                font-size: 0.8rem;
+                opacity: 0.5;
+              }
+
+              @media screen and (min-width: 820px) {
                 h4 {
                   font-size: 1rem;
                 }
@@ -326,57 +271,23 @@
               }
             }
           }
-        }
-      }
-    }
-  }
-}
 
-//*---------->> desktop
-
-@media screen and (min-width: 1025px) {
-  #testimonials {
-    padding: 0 12vw 50px 12vw;
-
-    .testimonials-container {
-      gap: 100px;
-      align-items: center;
-
-      .mySwiper-images {
-        .prev {
-          left: -60px;
-        }
-        .next {
-          right: -60px;
-        }
-      }
-
-      .mySwiper-content {
-        .swiperSlide-card {
-          .title {
-            transition: color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            &:hover {
-              color: $yellow;
-            }
-            h3 {
-              font-size: 1.8rem;
-              font-weight: 400;
-            }
-          }
-
-          .shortReview {
+          .rating-container {
             margin-top: 10px;
-            font-size: 1.2rem;
-            line-height: 1.4;
-          }
-
-          .profile-container {
-            margin: 10px 0;
-            flex-direction: row;
-            align-self: center;
+            display: flex;
             justify-content: space-between;
 
-            .rating-container {
+            .stars {
+              display: flex;
+            }
+
+            p {
+              font-size: 0.8rem;
+              opacity: 0.8;
+              font-style: italic;
+            }
+
+            @media screen and (min-width: 1025px) {
               margin: 0;
               gap: 3px;
               justify-content: center;
@@ -387,7 +298,19 @@
               }
             }
           }
-          .button {
+        }
+
+        .button {
+          background-color: $yellow;
+          color: $light;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 10px 0;
+          border-radius: 5px;
+
+          @media screen and (min-width: 1025px) {
             transition: background 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
             &:hover {
               background-color: $dark;
